<resources>
    <string name="app_name">TestNux</string>

    <!-- Strings related to ui -->
    <string name="prompt_email">Correo electronico</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Coreo invalido debe contener @</string>
    <string name="invalid_password">La contraseña debe contener mas de 5 caracteres</string>
    <string name="login_failed">"Error al iniciar sesión"</string>

    <string name="firstName">Nombre</string>
    <string name="userName">Nombre de usuario</string>
    <string name="address">Dirección:</string>
    <string name="fullAddress">Dirección completa</string>
    <string name="phone">Telefono:</string>
    <string name="userPhone">Telefono de usuario</string>
    <string name="website">Sitio Web</string>
    <string name="company">Empresa</string>
    <string name="companyName">Nombre de la empresa</string>
    <string name="post">Post</string>
    <string name="todos">Todos</string>
    <string name="title">Titulo</string>
    <string name="body">Cuerpo</string>
    <string name="showComments">Ver comentarios</string>
    <string name="completed">Completado</string>
    <string name="save">Guardar</string>


    <string name="ok">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="warning">Atención</string>
    <string name="networkError">No hay conexión a internet</string>
    <string name="signout">Salir</string>
    <string name="signoutMessage">¿Esta seguro que desea cerrar sesión?</string>

    <string name="title_usersActivity">Usuarios</string>
    <string name="title_DetailActivity">Detalles</string>
    <string name="title_PostActivity">Posts</string>
    <string name="title_CommentsActivity">Comments</string>
    <string name="title_TodosActivity">Todos</string>
    <string name="title_NewTaskActivity">New Task</string>

</resources>