<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.users.UserDetailActivity">

    <TextView
        android:id="@+id/name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:text= "@string/firstName"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/userName_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="18dp"
        android:textColor="@color/black"
        android:text="@string/userName"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/name_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/email_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="18dp"
        android:textColor="@color/black"
        android:text="@string/prompt_email"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/userName_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/address_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="18dp"
        android:textColor="@color/black"
        android:text="@string/address"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/email_tv"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/fullAddress_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="18dp"
        android:text="@string/fullAddress"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/email_tv"
        app:layout_constraintStart_toEndOf="@id/address_tv"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/phone_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="18dp"
        android:textColor="@color/black"
        android:text="@string/phone"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/fullAddress_tv"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/userPhone_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="18dp"
        android:text="@string/userPhone"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/fullAddress_tv"
        app:layout_constraintStart_toEndOf="@id/phone_tv"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/website_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="18dp"
        android:textColor="@color/purple_700"
        android:text="@string/website"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/phone_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/company_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="18dp"
        android:textColor="@color/black"
        android:text="@string/company"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/website_tv"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/companyName_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="18dp"
        android:text="@string/companyName"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/website_tv"
        app:layout_constraintStart_toEndOf="@id/company_tv"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/post_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="10dp"
        android:text="@string/post"
        app:layout_constraintTop_toBottomOf="@id/company_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/todos_btn"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/todos_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/todos"
        app:layout_constraintTop_toBottomOf="@id/company_tv"
        app:layout_constraintStart_toEndOf="@id/post_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>